# eclipse-gn

./: CONTRIBUTING.md  LICENSE  README.md  pom.xml
org.chromium.gnsupport.core/: .classpath  .gitignore  .options  .project  about.ini  about.properties  build.properties  gn.cup  gn.jflex  plugin.xml  pom.xml
org.chromium.gnsupport.core.test/: .classpath  .project  build.properties  pom.xml
org.chromium.gnsupport.core/OSGI-INF/l10n/: bundle.properties
org.chromium.gnsupport.core/src/org/chromium/gnsupport/core/: GnCodeUtil.java  GnCorePlugin.java  GnLanguageToolkit.java  GnNature.java
org.chromium.gnsupport.core/src/org/chromium/gnsupport/core/ast/: GnArgument.java  (+12 more)
org.chromium.gnsupport.feature/: .project  build.properties  feature.properties  feature.xml  pom.xml
org.chromium.gnsupport.feature/sourceTemplateFeature/: feature.properties
org.chromium.gnsupport.site/: .project  category.xml  pom.xml
org.chromium.gnsupport.target-definition/: org.chromium.gnsupport.target-definition.target  pom.xml
org.chromium.gnsupport.ui/: .project  build.properties  plugin.xml  pom.xml
org.chromium.gnsupport.ui/OSGI-INF/l10n/: bundle.properties
org.chromium.gnsupport.ui/src/org/chromium/gnsupport/internal/ui/prefs/: GnEditorColoringConfigurationBlock.java  GnEditorMarkOccurrencesPreferencePage.java  GnEditorPreferencesPage.java  GnEditorSyntaxColoringPreferencePage.java  GnFormatterPreferencePage.java  GnGlobalPreferencesPage.java  Messages.java  PreviewFile.gn  messages.properties
org.chromium.gnsupport.ui/src/org/chromium/gnsupport/ui/: GnUiPlugin.java
(+32 files in other folders)
